--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".view.MainActivity"
+    tools:context=".main.view.MainActivity"
     tools:showIn="@layout/act_main"
     tools:listitem="@layout/widget_contact_item">
 </android.support.v7.widget.RecyclerView>
