--- a/app/src/main/res/layout/widget_contact_item.xml
+++ b/app/src/main/res/layout/widget_contact_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable name="contact" type="br.rpm.call.list.model.CallDetail"/>
@@ -10,6 +10,9 @@
     <android.support.percent.PercentRelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/default_margin"
+        android:background="@drawable/bg_card"
+        android:elevation="@dimen/default_elevation"
         android:padding="@dimen/default_padding">
 
         <TextView
